# formatparse

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  README.md  RELEASING.md  SECURITY.md  SECURITY_AUDIT.md  TEST_STATUS.md  _formatparse.pyi  cargo-deny.toml  coverage.xml  mutmut_config.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  dependency-review.yml  mutation.yml  publish.yml  security-audit.yml
docs/: architecture.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  security.md  security.rst
docs/api/: classes.rst  compatibility.rst  core_functions.rst  exceptions.rst  index.rst  native_reference.rst  type_aliases.rst  types_and_iterators.rst  validation.rst
docs/examples/: cookbook.rst  index.rst
docs/user_guides/: custom_types.rst  datetime_parsing.rst  faq_troubleshooting.rst  getting_started.rst  index.rst  matching_behavior.rst  migration_from_parse.rst  multiline_and_blocks.rst  nesting_and_composition.rst  patterns.rst  performance.rst  post_parse_validation.rst  type_specifiers.rst
formatparse/: __init__.py  _native.py  _version.py  api.py  bidirectional.py  compat.py  custom.py  exceptions.py  types.py  tz.py  validation.py
formatparse-core/: Cargo.toml  README.md
formatparse-core/src/: datetime.rs  error.rs  indent_block.rs  input_line_continuations.rs  lib.rs  lookaround.rs
formatparse-core/src/parser/: mod.rs  pattern.rs  regex.rs
formatparse-core/src/types/: definitions.rs  mod.rs  regex.rs
formatparse-core/src/types/regex/: custom.rs  datetime_fragment.rs  helpers.rs  mod.rs  numeric.rs  string.rs  tests.rs
formatparse-pyo3/: Cargo.toml  README.md
formatparse-pyo3/src/: error.rs  lib.rs  match.rs  match_rs.rs  parser.rs  pattern_cache.rs  pattern_normalize.rs  result.rs  results.rs  unicode_offsets.rs
formatparse-pyo3/src/datetime/: common.rs  ctime.rs  fixed_tz.rs  global.rs  http.rs  iso.rs  mod.rs  rfc2822.rs  strftime.rs  system.rs  time.rs  us.rs
formatparse-pyo3/src/parser/: findall_engine.rs  findall_iter.rs  format_parser.rs  format_parser_pymethods.rs  matching.rs  pattern.rs  raw_match.rs
formatparse-pyo3/src/parser/matching/: capture.rs  custom_type.rs  mod.rs  nested_dict.rs  py_match.rs  raw.rs
formatparse-pyo3/src/types/: builtin_convert.rs  conversion.rs  mod.rs
parse_rs/: __init__.py
scripts/: benchmark_optimizations.py  compare_benchmarks.py  release.sh  security-audit-local.sh  security-check.sh
src/: datetime.rs  datetime_parse.rs  error.rs  lib.rs  match_rs.rs  parser.rs  result.rs  types.rs
src/datetime/: common.rs  mod.rs
src/parser/: format_parser.rs  matching.rs  pattern.rs
src/types/: conversion.rs  mod.rs  regex.rs
structparse/: __init__.py
tests/: README.md  conftest.py  test_alignment_precision.py  test_basic.py  test_bidirectional.py  test_brace_delimited.py  test_bugfixes_0_8_3.py  test_bugfixes_0_8_4.py  test_bugs.py  test_builtin_validators.py  test_compile_cache.py  test_composition.py  test_datetime.py  test_errors.py  test_fill_character.py  test_findall.py  test_findall_iter.py  test_float_zero_precision.py  test_formatparser.py  test_fuzz.py  test_indent_block.py  test_integer_leading_spaces.py  test_integer_width_precision.py  test_integration_comprehensive.py  test_lookaround.py  test_memory.py  test_multiline.py  test_nested_format.py  test_parse.py  test_parse_batch.py  test_parse_with_validation.py  test_parsetype.py  test_pattern.py  test_pattern_continuations.py  test_performance.py  test_property.py  test_result.py  test_search.py  test_security.py  test_stress.py  (+3 more)
tests/parse_compat/: __init__.py  test_parse_numbers.py
