[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "_formatparse"
python-source = "."
bindings = "pyo3"
compatibility = "linux"
manifest-path = "formatparse-pyo3/Cargo.toml"
include = ["formatparse/**/*.py", "formatparse/py.typed"]

[project]
name = "formatparse"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
dynamic = ["version"]
description = "Parse strings using a specification based on the Python format() syntax (Rust implementation)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Odos Matthews", email = "odosmatthews@gmail.com" }]
keywords = ["parse", "format", "string", "parsing"]
dependencies = []

[project.optional-dependencies]
test = [
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",
    "pympler>=0.9",
    "memory_profiler>=0.60",
]
dev = ["mutmut>=2.0"]

[project.urls]
Homepage = "https://github.com/eddiethedean/formatparse"
Repository = "https://github.com/eddiethedean/formatparse"

[tool.pytest.ini_options]
# With PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 (see Makefile and CI), only these plugins load.
# That avoids broken third-party pytest11 plugins (e.g. old pytest-asyncio) breaking startup.
addopts = "-p benchmark -p hypothesispytest"
markers = [
    "benchmark: marks tests as benchmarks",
    "slow: marks tests as slow running",
    "stress: marks tests as stress/load tests",
]

[tool.coverage.run]
source = ["formatparse"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mutmut]
paths_to_mutate = ["formatparse/"]
test_command = "env PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 python -m pytest tests -x"

[tool.mypy]
python_version = "3.8"
files = ["formatparse", "tests"]

[[tool.mypy.overrides]]
module = ["pympler", "memory_profiler"]
ignore_missing_imports = true

