[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "_formatparse"
bindings = "pyo3"
# Enable crate feature that turns on pyo3/extension-module for wheels / develop builds.
features = ["extension-module"]
# Linux wheel tag policy for PyPI (auditwheel/manylinux). Does not limit macOS/Windows
# wheels or local `maturin develop`.
compatibility = "linux"
manifest-path = "formatparse-pyo3/Cargo.toml"
include = ["formatparse/**/*.py", "formatparse/py.typed"]

[project]
name = "formatparse"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
dynamic = ["version"]
description = "Parse strings using a specification based on the Python format() syntax (Rust implementation)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Odos Matthews", email = "odosmatthews@gmail.com" }]
keywords = ["parse", "format", "string", "parsing"]
dependencies = []

[project.optional-dependencies]
test = [
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",
    "pympler>=0.9",
    "memory_profiler>=0.60",
]
dev = ["mutmut>=2.0"]

[project.urls]
Homepage = "https://github.com/eddiethedean/formatparse"
Repository = "https://github.com/eddiethedean/formatparse"

[tool.pytest.ini_options]
# With PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 (see Makefile and CI), only these plugins load.
# That avoids broken third-party pytest11 plugins (e.g. old pytest-asyncio) breaking startup.
# pytest_cov is included so `pytest --cov=...` works without extra `-p` flags.
addopts = "-p benchmark -p hypothesispytest -p pytest_cov"
markers = [
    "benchmark: marks tests as benchmarks",
    "slow: marks tests as slow running",
    "stress: marks tests as stress/load tests",
]

[tool.coverage.run]
source = ["formatparse"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
# Enforced on the Ubuntu 3.11 coverage job (no continue-on-error). The tree is
# effectively one Python module (`formatparse/__init__.py`); raise toward 90+ as gaps close.
fail_under = 86
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mutmut]
paths_to_mutate = ["formatparse/"]
test_command = "env PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 python -m pytest tests -x"

[tool.mypy]
python_version = "3.8"
files = ["formatparse", "tests"]

[[tool.mypy.overrides]]
module = ["pympler", "memory_profiler"]
ignore_missing_imports = true

