[package]
name = "formatparse-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true
description = "Core Rust library for parsing strings using Python format() syntax (no Python bindings)"

[dependencies]
regex = "1.12.3"
once_cell = "1.21.4"

[dev-dependencies]
proptest = "1.10.0"

