[package]
name = "formatparse-core"
version.workspace = true
authors.workspace = true
license.workspace = true
license-file = "../LICENSE"
repository.workspace = true
readme = "README.md"
exclude = ["src/types/regex/tests.rs"]
edition.workspace = true
description = "Core Rust library for parsing strings using Python format() syntax (no Python bindings)"
documentation = "https://docs.rs/formatparse-core"
keywords = ["parse", "format", "string", "regex", "datetime"]
categories = ["parser-implementations", "text-processing"]
rust-version = "1.83"

[package.metadata.docs.rs]
all-features = false

[dependencies]
regex = "1.12.3"
fancy-regex = "0.17"
once_cell = "1.21.4"

[dev-dependencies]
proptest = "1.10.0"
# Direct dev-dep; proptest may still pull rand 0.9 transitively.
rand = "0.10.1"

