[package]
name = "formatparse-pyo3"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
description = "PyO3 bindings for formatparse"

[lib]
name = "_formatparse"
crate-type = ["cdylib"]

[features]
default = []
# Opt-in tests that require a Python interpreter (see raw_match.rs).
python-tests = []

[dependencies]
formatparse-core = { path = "../formatparse-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
lru = "0.16.3"
once_cell = "1.21.4"
rayon = "1.8"

