[package]
name = "formatparse-pyo3"
version.workspace = true
authors.workspace = true
license.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "README.md"
edition.workspace = true
description = "PyO3 bindings for formatparse (native _formatparse extension; use PyPI for Python installs)"
documentation = "https://docs.rs/formatparse-pyo3"
keywords = ["pyo3", "python", "parse", "format", "formatparse"]
categories = ["api-bindings", "parser-implementations"]
rust-version = "1.83"

[package.metadata.docs.rs]
all-features = false

[lib]
name = "_formatparse"
crate-type = ["cdylib"]

[features]
default = []
# Used by maturin / wheels so the module does not link libpython (resolved at load time).
extension-module = ["pyo3/extension-module"]
# Opt-in tests that require a Python interpreter (see raw_match.rs).
python-tests = []

[dependencies]
formatparse-core.workspace = true
pyo3 = { version = "0.29", default-features = false, features = ["macros"] }
regex = "1.12.4"
fancy-regex = "0.18"
serde = { version = "1.0", features = ["derive"] }
lru = "0.18.0"
once_cell = "1.21.4"
rayon = "1.12"

